[tool.poetry]
name = "jinjat"
version = "0.6"
description = "A low-code data application framework that uses dbt Core and OpenAPI"
authors = ["buremba <emrekabakci@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["dbt", "server", "streamlit", "git", "refine", "data-app", "snowflake"]
documentation = "https://github.com/jinjat-data/jinjat"
repository = "https://github.com/jinjat-data/jinjat"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
click = ">7"
dbt-core = "=1.5.0"
watchdog = ">=2.2.1"
"ruamel.yaml" = ">=0.17"
rich = ">=10"
pydantic = "^1.9.1"
bottle = "^0.12.23"
orjson = "^3.8.0"
fastapi = "^0.104.1"
openapi-schema-pydantic = "^1.2.4"
deepmerge = "^1.1.0"
jsonschema = "^3.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
jinja2-simple-tags = "^0.4.0"
jsonref = "^1.1.0"
jmespath = "^1.0.1"
feedparser = { version = "^6.0.10", optional = true }
dbt-duckdb = { version = "^1.5.0", optional = true }
pandas = "^1.5.3"
# Deploy
sqlglot = "12.3.0"

[tool.poetry.dev-dependencies]
black = ">=23.3.0"
mypy = ">=0.910"
pytest = ">=6.2.5"
coverage = ">=5.5"
pylint = ">=2.11.1"
nox = ">=2021.6.12"
pytest-mock = ">=3.6.1"
viztracer = "^0.15.3"

[tool.poetry.extras]
duckdb = ["dbt-duckdb"]
snowflake = ["dbt-snowflake"]
deploy = [
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
jinjat = 'jinjat.main:cli'
